<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Wijngilde</string>
    <string name="events">Events</string>
    <string name="our_wines">Our wines</string>
    <string name="become_member">Become a member</string>
    <string name="welcome_title">Wijngilde Baal</string>
    <string name="login">Login</string>
    <string name="previous">Previous</string>
    <string name="menu_events">Events</string>
    <string name="menu_wines">Wines</string>
    <string name="menu_membership">Membership</string>
    <string name="description_background">Background image of wine</string>
    <string name="who_we_are_title">Who we are</string>
    <string name="who_we_are_text">"We are a foundation that deals with everything that has to do with wine. For example, we organize a weekly evening to taste wine. Every week this evening is organized with a different theme. Furthermore, we organize annually different events to which all members are welcome. We also make a few ourselves wines that can be tasted and bought on every wine-tasting evening in our members' house. Since we already have 30 years of experience in this, we can still speak of a few top wines within our range. If you are interested in becoming a member, please read the 'Becoming a member' section. It explains how you can join your member make our union."</string>
    <string name="become_member_title">Becoming a member</string>
    <string name="become_member_text">You can become a member by registering at our secretary. He is present at every test evening and event. You will be annual membership fee of 25 € must be paid and you must enter some information. This will create a login and password with which you use this application will have the opportunity to register for events.</string>
    <string name="menu_events_clean_up">Remove past events</string>
    <string name="places">Places:</string>
    <string name="event">Event:</string>
    <string name="date">Date:</string>
    <string name="event_title">Event</string>
    <string name="places_title">Places</string>
    <string name="date_title">Date</string>
    <string name="description_title">Description</string>
    <string name="clean_events_up">Delete past events</string>
    <string name="title_activity_event_clean_up_service">Clean up events</string>
    <string name="hello_blank_fragment">Detail Wine</string>
</resources>
