<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_menu_events_icon"
            android:title="@string/menu_events" />
        <item
            android:id="@+id/nav_wines"
            android:icon="@drawable/ic_menu_wines_icon"
            android:title="@string/menu_wines" />
        <item
            android:id="@+id/nav_member"
            android:icon="@drawable/ic_menu_membership"
            android:title="@string/menu_membership" />
        <item
            android:id="@+id/events_clean_up"
            android:icon="@drawable/ic_menu_membership"
            android:title="@string/menu_events_clean_up" />
    </group>
</menu>